--- a/eye/eye.html
+++ b/eye/eye.html
@@ -25,7 +25,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background-image: url(/Users/guillaud_noe/Desktop/eye/eye.png);
+            background-image: url(https://github.com/noeguillaud/weirdthingsoutthere/blob/main/eye/eye.png);
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
@@ -35,7 +35,7 @@
             position: absolute;
             width: 65px;
             height: 65px;
-            background-image: url("red.png"); /* replace with your pupil file path */
+            background-image: url(https://github.com/noeguillaud/weirdthingsoutthere/blob/main/eye/red.png)
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
