--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background-image: url(https://github.com/noeguillaud/weirdthingsoutthere/blob/main/eye/eye.png);
+            background-image: url(https://noeguillaud.github.io/weirdthingsoutthere/eye/eye.png);
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
