--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             position: absolute;
             width: 65px;
             height: 65px;
-            background-image: url(https://github.com/noeguillaud/weirdthingsoutthere/blob/main/eye/red.png)
+            background-image: url(https://noeguillaud.github.io/weirdthingsoutthere/eye/red.png)
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
